@@ -46,8 +46,8 @@ import org.mockbukkit.mockbukkit.entity.data.EntityState;
 import org.mockbukkit.mockbukkit.exception.UnimplementedOperationException;
 import org.mockbukkit.mockbukkit.world.WorldMock;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicReference;
 
@@ -284,7 +284,7 @@ class LivingEntityMockTest
 	@Test
 	void testMultiplePotionEffects()
 	{
-		Collection<PotionEffect> effects = Arrays.asList(new PotionEffect(PotionEffectType.BAD_OMEN, 3, 1),
+		Collection<PotionEffect> effects = List.of(new PotionEffect(PotionEffectType.BAD_OMEN, 3, 1),
 				new PotionEffect(PotionEffectType.LUCK, 5, 2));
 
 		assertTrue(livingEntity.addPotionEffects(effects));
@@ -540,6 +540,13 @@ class LivingEntityMockTest
 	}
 
 	@Test
+	void attackIsntImplementedYet()
+	{
+		assertThrows(NullPointerException.class, () -> this.livingEntity.attack(null));
+		assertThrows(UnimplementedOperationException.class, () -> this.livingEntity.attack(this.livingEntity));
+	}
+
+	@Test
 	void testAttack_AsPlayer()
 	{
 		PlayerMock player = server.addPlayer();
@@ -597,4 +604,5 @@ class LivingEntityMockTest
 		livingArmorStand.setAI(false);
 		assertFalse(livingArmorStand.hasAI());
 	}
+
 }
